# flowjoey

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flojoe/: __init__.py  animated_flow_plots.py  logistic_functions.py  modeling_plots.py
src/flow_cytometry/: __init__.py  animated_flow_plots.py  djem_animation.py  flow_animation.py  load_plate.py  modeling_plots.py  predefined_gates.py  rolling_average.py  static_flow_plots.py  well_functions.py
src/flowjoey/: __init__.py  animated_flow_plots.py  djem_animation.py  load_adata.py  load_sample_sheet.py  rolling_average.py
